--- a/BeneluxWebb/templates/leaderboard.html
+++ b/BeneluxWebb/templates/leaderboard.html
@@ -31,7 +31,7 @@
                         <div class="d-flex align-items-center">
                             <img src="{{ url_for('static', filename='img/flags/' ~ player.country ~ '.png') }}"
                                 alt="{{ player.country }}" width="20" class="me-2">
-                            <span>{{ player.nickname }}</span>
+                            <span>{{ player.player_name }}</span>
                         </div>
                     </td>
                     <td>
