--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -115,6 +115,17 @@
       body.dark-mode .text-muted {
         color: #8a8a8a !important;
       }
+
+      .team-link {
+        text-decoration: none;
+        color: #ffffff; /* Or whatever you want */
+        transition: color 0.3s ease;
+      }
+
+      .team-link:hover {
+        text-decoration: underline;
+        color: #0056b3;
+      }
     </style>
   </head>
   
