--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -1,3 +1,7 @@
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea.css') }}">
+{% endblock %}
+
 {% extends "base.html" %}
 
 {% block title %}ESEA{% endblock %}
