--- a/BeneluxWebb/templates/leaderboard.html
+++ b/BeneluxWebb/templates/leaderboard.html
@@ -1,49 +1,94 @@
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/leaderboard.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/flags_filter.css') }}">
+{% endblock %}
+
 {% extends "base.html" %}
 
 {% block title %}Leaderboard{% endblock %}
 
 {% block content %}
-    <h1 class="mt-4">Leaderboard</h1>
-    
-    <form method="get" class="form-inline mt-4 mb-3">
-    <label for="country" class="me-2">Filter by country:</label>
-    <select class="form-control me-2 mt-2" style="width:auto;" id="country" name="country" onchange="this.form.submit()">
-        <option value="all" {% if selected_country == 'all' %}selected{% endif %}>All</option>
-        <option value="nl" {% if selected_country == 'nl' %}selected{% endif %}>Netherlands</option>
-        <option value="be" {% if selected_country == 'be' %}selected{% endif %}>Belgium</option>
-        <option value="lu" {% if selected_country == 'lu' %}selected{% endif %}>Luxembourg</option>
-    </select>
-    </form>
 
-    <table class="table table-dark table-striped table-hover mt-4">
-        <thead>
-            <tr>
-                <th style="width: 5%">#</th>
-                <th style="width: 60%">Player</th>
-                <th style="width: 15%">ELO</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for player in players %}
+<h1 class="mt-4">Leaderboard</h1>
+
+<div class="row mt-4">
+    <!-- Filter box -->
+    <div class="col-md-3 mb-3">
+        <div class="card">
+            <div class="card-header d-flex align-items-center justify-content-center">
+                <h5 class="card-title mb-0">Filter</h5>
+            </div>
+            <div class="card-body">
+                <form method="get" action="{{ url_for('views.leaderboard') }}">
+                    <div class="mb-3 text-center">
+                        <label class="form-label d-block">Countries</label>
+                        <div class="d-flex justify-content-center align-items-center gap-3">
+                            {% for country in ['nl', 'be', 'lu'] %}
+                            <input type="checkbox"
+                                   class="btn-check"
+                                   id="filter{{ country }}"
+                                   name="countries"
+                                   value="{{ country }}"
+                                   autocomplete="off"
+                                   {% if selected and country in selected %}checked{% endif %}>
+                            <label class="flag-toggle"
+                                   for="filter{{ country }}"
+                                   data-bs-toggle="tooltip"
+                                   data-bs-placement="top"
+                                   title="{{ country.upper() }}">
+                                <img src="{{ url_for('static', filename='img/flags/' + country + '.png') }}"
+                                     alt="{{ country }} flag"
+                                     class="flag-img">
+                            </label>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-secondary mt-2">Apply Filter</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Leaderboard table -->
+    <div class="col-md-9 mb-3">
+        {% if data %}
+        <table class="table table-dark table-striped table-hover rounded shadow-sm overflow-hidden">
+            <thead>
+                <tr>
+                    <th style="width: 5%">#</th>
+                    <th style="width: 60%">Player</th>
+                    <th style="width: 15%">ELO</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for player in data %}
                 <tr>
                     <td>{{ loop.index }}</td>
                     <td>
                         <div class="d-flex align-items-center">
-                            <img src="{{ url_for('static', filename='img/flags/' ~ player.country ~ '.png') }}"
-                                alt="{{ player.country }}" width="20" class="me-2">
+                            <img src="{{ url_for('static', filename='img/flags/' ~ player.country|lower ~ '.png') }}"
+                                 alt="{{ player.country }}" width="20" class="me-2">
                             <span>{{ player.player_name }}</span>
                         </div>
                     </td>
                     <td>
                         {{ player.faceit_elo }}
-                        <a href="https://www.faceit.com/en/players/{{ player.nickname }}" target="_blank">
+                        <a href="https://www.faceit.com/en/players/{{ player.player_name }}" target="_blank"
+                           aria-label="Faceit profile for {{ player.player_name }}">
                             <img src="{{ url_for('static', filename='img/faceit/faceit_icon.png') }}" 
-                                alt="Faceit" width="20" class="ms-2">
+                                 alt="Faceit" width="20" class="ms-2">
                         </a>
                     </td>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <p class="text-center mt-4">No players found for the selected countries.</p>
+        {% endif %}
+    </div>
+</div>
+
 {% endblock %}
