--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
+{% extends "base.html" %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea.css') }}">
 {% endblock %}
 
-{% extends "base.html" %}
-
 {% block title %}ESEA{% endblock %}
 
-{% block content%}
+{% block content %}
 
 <!-- center-aligned tabs -->
 <ul class="nav nav-tabs justify-content-center mt-5" id="eseaTabs" role="tablist">
@@ -29,4 +30,9 @@
   <div class="text-muted">Loading...</div>
 </div>
 
+{% endblock %}
+
+{% block javascript %}
+  {{ super() }}
+  <script src="{{ url_for('static', filename='js/esea.js') }}"></script>
 {% endblock %}
