--- a/BeneluxWebb/templates/leaderboard_copy.html
+++ b/BeneluxWebb/templates/leaderboard_copy.html
@@ -1,49 +1,98 @@
+<!DOCTYPE html>
 {% extends "base.html" %}
 
-{% block title %}Leaderboard{% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/leaderboard.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/flags_filter.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css" />
+{% endblock %}
 
 {% block content %}
-    <h1 class="mt-4">Leaderboard</h1>
-    
-    <form method="get" class="form-inline mt-4 mb-3">
-    <label for="country" class="me-2">Filter by country:</label>
-    <select class="form-control me-2 mt-2" style="width:auto;" id="country" name="country" onchange="this.form.submit()">
-        <option value="all" {% if selected_country == 'all' %}selected{% endif %}>All</option>
-        <option value="nl" {% if selected_country == 'nl' %}selected{% endif %}>Netherlands</option>
-        <option value="be" {% if selected_country == 'be' %}selected{% endif %}>Belgium</option>
-        <option value="lu" {% if selected_country == 'lu' %}selected{% endif %}>Luxembourg</option>
-    </select>
-    </form>
 
-    <table class="table table-dark table-striped table-hover mt-4">
-        <thead>
-            <tr>
-                <th style="width: 5%">#</th>
-                <th style="width: 60%">Player</th>
-                <th style="width: 15%">ELO</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for player in players %}
-                <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>
-                        <div class="d-flex align-items-center">
-                            <img src="{{ url_for('static', filename='img/flags/' ~ player.country ~ '.png') }}"
-                                alt="{{ player.country }}" width="20" class="me-2">
-                            <span>{{ player.player_name }}</span>
-                        </div>
-                    </td>
-                    <td>
-                        {{ player.faceit_elo }}
-                        <a href="https://www.faceit.com/en/players/{{ player.player_name }}" target="_blank">
-                            <img src="{{ url_for('static', filename='img/faceit/faceit_icon.png') }}" 
-                                alt="Faceit" width="20" class="ms-2">
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="leaderboard-box mt-4">
+    <!-- Status and error messages -->
+    <div id="status-messages">
+        {% if error %}
+        <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading">Error Loading Leaderboard</h4>
+            <p>{{ error }}</p>
+            <hr>
+            <p class="mb-0">Woops...</p>
+        </div>
+        {% endif %}
+    </div>
     
+    <!-- Filter bar -->
+    <div class="filter-box my-3">
+        <form class="filter-form" method="get" id="leaderboard-form" onsubmit="return false;">
+
+            <!-- Show entries (left) -->
+            <div class="entries-selector d-flex align-items-center">
+                <label for="per-page-select" class="form-label">Show</label>
+                <select id="per-page-select" class="form-select">
+                    {% for option in [10, 20, 50, 100] %}
+                    <option value="{{ option }}" {% if per_page == option %}selected{% endif %}>{{ option }}</option>
+                    {% endfor %}
+                </select>
+                <label for="per-page-select" class="form-label">players</label>
+            </div>
+
+            <!-- Centered filters -->
+            <div class="d-flex flex-column flex-grow-1 mx-3">
+                <div class="d-flex justify-content-center flex-wrap gap-4">
+
+                    <!-- Country filters -->
+                    <div class="text-center">
+                        <!-- <label class="form-label text-white mb-1">Country</label> -->
+                        <div class="d-flex justify-content-center align-items-center gap-2">
+                            {% for country in ['nl', 'be', 'lu'] %}
+                            <input type="checkbox"
+                                class="btn-check"
+                                id="filter{{ country }}"
+                                name="countries"
+                                value="{{ country }}"
+                                autocomplete="off"
+                                {% if selected and country in selected %}checked{% endif %}>
+                            <label class="flag-toggle"
+                                for="filter{{ country }}"
+                                data-bs-toggle="tooltip"
+                                data-bs-placement="top"
+                                title="{{ country.upper() }}">
+                                <img src="{{ url_for('static', filename='img/flags/' + country + '.png') }}"
+                                    alt="{{ country }} flag"
+                                    class="flag-img">
+                            </label>
+                            {% endfor %}
+                        </div>
+                    </div>
+
+                    <!-- ELO filter -->
+                    <div class="d-flex flex-row justify-content-center align-items-center">
+                        <span class="elo-value-pill me-3" id="elo-min-value">0</span>
+                        <div id="elo-slider"></div>
+                        <span class="elo-value-pill ms-3" id="elo-max-value">5000</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Search (right) -->
+            <div class="d-flex flex-row align-items-center ms-3">
+                <label for="search" class="form-label text-white mb-1 me-2">Search:</label>
+                <input type="text" class="form-control form-control-sm" id="search" name="search"
+                    placeholder="Player name..." value="{{ search or '' }}" style="width: 160px;">
+            </div>
+
+        </form>
+    </div>
+
+    <div class="leaderboard-table pb-5">
+        {% include "partials/_leaderboard_table.html" %}
+    </div>
+</div>
+{% endblock %}
+
+{% block javascript %}
+{{ super() }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
+<script src="{{ url_for('static', filename='js/leaderboard.js') }}"></script>
 {% endblock %}
