--- a/BeneluxWebb/templates/leaderboard.html
+++ b/BeneluxWebb/templates/leaderboard.html
@@ -16,7 +16,7 @@
         <!-- Top right filters (search + per-page) -->
         <div class="column-right">
             <form class="d-flex justify-content-between align-items-center flex-wrap gap-2" method="get"
-                  id="leaderboard-table-form" onsubmit="return false;">
+                    id="leaderboard-table-form" onsubmit="return false;">
 
                 <!-- Page size -->
                 <div class="entries-selector d-flex align-items-center">
@@ -110,5 +110,5 @@
 {% block javascript %}
 {{ super() }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
-<script src="{{ url_for('static', filename='js/leaderboard.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/leaderboard.js') }}"></script>
 {% endblock %}
