Added somewhat of a footer

--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -55,7 +55,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Nav bar collapse -->
+      <!-- Nav bar collapse - add navbar-collapse class -->
       <div class="collapse navbar-collapse" id="navbar">
         <!-- Left-aligned nav links -->
         <div class="navbar-nav me-auto">
@@ -88,6 +88,17 @@
       <p>This is a simple Flask application to display CS stats.</p>
       {% endblock %}
     </div>
+
+    <footer>
+      <p>© 2025 Koen Schouten. Code licensed under 
+        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noopener noreferrer">
+          GPL v3
+        </a>.
+      </p>
+      <p>
+        <a href="https://github.com/KG-Schouten/BeneluxCS" target="_blank" rel="noopener noreferrer">View source on GitHub</a>
+      </p>
+    </footer>
 
     <!-- Bootstrap 5 JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
